--- a/operational-mocks.cabal
+++ b/operational-mocks.cabal
@@ -10,7 +10,7 @@ cabal-version:  >= 1.10
 library
   hs-source-dirs:
       src
-  ghc-options: -Wall
+  ghc-options: -Wall -fno-warn-name-shadowing
 
   build-depends:
       base
@@ -26,7 +26,7 @@ test-suite spec
   hs-source-dirs:
       test
     , src
-  ghc-options: -Wall
+  ghc-options: -Wall -fno-warn-name-shadowing
 
   build-depends:
       base
