--- a/operational-mocks.cabal
+++ b/operational-mocks.cabal
@@ -15,7 +15,9 @@ library
   build-depends:
       base
     , operational
+    , free
     , hspec
+    , transformers
   exposed-modules:
       Control.Monad.Operational.Mocks
   default-language: Haskell2010
@@ -31,8 +33,11 @@ test-suite spec
   build-depends:
       base
     , operational
+    , free
     , hspec
+    , transformers
   other-modules:
+      Control.Monad.Free.MocksSpec
       Control.Monad.Operational.MocksSpec
       Control.Monad.Operational.Mocks
   default-language: Haskell2010
