Separate Free and Operational mocks

--- a/free/package.yaml
+++ b/free/package.yaml
@@ -1,9 +1,8 @@
-name: operational-mocks
+name: free-mocks
 version: "0.1"
 
 dependencies:
   - base
-  - operational
   - free
   - hspec
   - transformers
