--- a/free/free-mocks.cabal
+++ b/free/free-mocks.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 
-name:           operational-mocks
+name:           free-mocks
 version:        0.1
 build-type:     Simple
 cabal-version:  >= 1.10
@@ -14,13 +14,11 @@ library
 
   build-depends:
       base
-    , operational
     , free
     , hspec
     , transformers
   exposed-modules:
       Control.Monad.Free.Mocks
-      Control.Monad.Operational.Mocks
   default-language: Haskell2010
 
 test-suite spec
@@ -33,13 +31,10 @@ test-suite spec
 
   build-depends:
       base
-    , operational
     , free
     , hspec
     , transformers
   other-modules:
       Control.Monad.Free.MocksSpec
-      Control.Monad.Operational.MocksSpec
       Control.Monad.Free.Mocks
-      Control.Monad.Operational.Mocks
   default-language: Haskell2010
