--- a/operational-mocks.cabal
+++ b/operational-mocks.cabal
@@ -1,38 +1,40 @@
--- This file has been generated from package.yaml by hpack version 0.14.0.
+cabal-version: 1.12
+
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
 name:           operational-mocks
 version:        0.1
 build-type:     Simple
-cabal-version:  >= 1.10
 
 library
   hs-source-dirs:
       src
-  ghc-options: -Wall -fno-warn-name-shadowing
-
+  ghc-options: -Wall -Werror -fno-warn-name-shadowing
   build-depends:
       base
-    , operational
     , hspec
+    , operational
   exposed-modules:
       Control.Monad.Operational.Mocks
+  other-modules:
+      Paths_operational_mocks
   default-language: Haskell2010
 
 test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
-  hs-source-dirs:
-      test
-    , src
-  ghc-options: -Wall -fno-warn-name-shadowing
-
-  build-depends:
-      base
-    , operational
-    , hspec
   other-modules:
       Control.Monad.Operational.MocksSpec
       Control.Monad.Operational.Mocks
+      Paths_operational_mocks
+  hs-source-dirs:
+      test
+      src
+  ghc-options: -Wall -Werror -fno-warn-name-shadowing -fdefer-typed-holes
+  build-depends:
+      base
+    , hspec
+    , operational
   default-language: Haskell2010
