--- a/operational-mocks.cabal
+++ b/operational-mocks.cabal
@@ -1,11 +1,12 @@
--- This file has been generated from package.yaml by hpack version 0.14.0.
+cabal-version: 1.12
+
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
 name:           operational-mocks
 version:        0.1
 build-type:     Simple
-cabal-version:  >= 1.10
 
 library
   hs-source-dirs:
@@ -14,10 +15,12 @@ library
 
   build-depends:
       base
-    , operational
     , hspec
+    , operational
   exposed-modules:
       Control.Monad.Operational.Mocks
+  other-modules:
+      Paths_operational_mocks
   default-language: Haskell2010
 
 test-suite spec
@@ -25,14 +28,15 @@ test-suite spec
   main-is: Spec.hs
   hs-source-dirs:
       test
-    , src
+      src
   ghc-options: -Wall -fno-warn-name-shadowing
 
   build-depends:
       base
-    , operational
     , hspec
+    , operational
   other-modules:
       Control.Monad.Operational.MocksSpec
       Control.Monad.Operational.Mocks
+      Paths_operational_mocks
   default-language: Haskell2010
