--- a/operational-mocks.cabal
+++ b/operational-mocks.cabal
@@ -11,8 +11,7 @@ build-type:     Simple
 library
   hs-source-dirs:
       src
-  ghc-options: -Wall -fno-warn-name-shadowing
-
+  ghc-options: -Wall -Werror -fno-warn-name-shadowing
   build-depends:
       base
     , hspec
@@ -26,17 +25,16 @@ library
 test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
-  hs-source-dirs:
-      test
-      src
-  ghc-options: -Wall -fno-warn-name-shadowing
-
-  build-depends:
-      base
-    , hspec
-    , operational
   other-modules:
       Control.Monad.Operational.MocksSpec
       Control.Monad.Operational.Mocks
       Paths_operational_mocks
+  hs-source-dirs:
+      test
+      src
+  ghc-options: -Wall -Werror -fno-warn-name-shadowing -fdefer-typed-holes
+  build-depends:
+      base
+    , hspec
+    , operational
   default-language: Haskell2010
