--- a/operational-mocks.cabal
+++ b/operational-mocks.cabal
@@ -34,7 +34,8 @@ test-suite spec
       src
   ghc-options: -Wall -Werror -fno-warn-name-shadowing -fdefer-typed-holes
   build-depends:
-      base
+      HUnit
+    , base
     , hspec
     , operational
   default-language: Haskell2010
